welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:15: error: value Est is not a member of object plm.universe.Direction
    if(getDirection()==Direction.Est){
                                 ^SnakeBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
      if (estFaceMur()){
      ^SnakeBuggle:23: error: type mismatch;
 found   : Unit
 required: Boolean
      if(estFaceMur()){
      ^